middle-align for logo fix

--- a/assets/scss/components/header.scss
+++ b/assets/scss/components/header.scss
@@ -24,7 +24,9 @@
             display:flex;
             flex-direction: column;
             align-self:flex-start;
+            justify-content:center;
             align-content:center;
+            height:100%;
             flex-basis:100%;
             padding-left:10px;
             
@@ -33,7 +35,7 @@
                 padding:0;
             }
 
-            h1{font-size:1.2em; padding-top:5px;}
+            h1{font-size:1.2em;}
             h2{font-size:1em;}
         }
 
